--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front-bot",
   "version": "0.0.1",
   "description": "backbot",
-  "main": "app.js",
+  "main": "server.js",
   "dependencies": {
         "bl": "^1.1.2",
         "bluebird": "^3.3.4",
